--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,9 @@ h1, h2, h3, p, ul, ol {
   .menu__body {
     overflow: auto;
     position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     z-index: 200;
     width: 100%;
     height: 100%;
@@ -169,7 +172,6 @@ h1, h2, h3, p, ul, ol {
 @media (max-width: 992px) {
   .menu__list {
     flex-direction: column;
-    padding: 50% 0;
   }
 }
 
@@ -435,8 +437,9 @@ li:last-child {
 }
 
 .card__item {
-  border: 3px solid;
-  border-color: rgba(85, 202, 232, 0.5);
+  border: 3px solid transparent;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(180deg, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
   margin: 0px 10px 14px 0px;
   padding: 24px 15px 19px 15px;
   width: 211px;
@@ -593,6 +596,7 @@ li:last-child {
   position: relative;
 }
 .relables__items .first:after {
+  z-index: -1;
   content: "";
   position: absolute;
   width: 315px;
@@ -607,6 +611,7 @@ li:last-child {
   position: relative;
 }
 .relables__items .second:after {
+  z-index: -1;
   content: "";
   position: absolute;
   width: 315px;
@@ -622,6 +627,7 @@ li:last-child {
   position: relative;
 }
 .relables__items .third:after {
+  z-index: -1;
   content: "";
   position: absolute;
   width: 315px;
@@ -854,7 +860,7 @@ li:last-child {
 }
 .form form:after {
   z-index: -1;
-  content: url("../img/Ellipse 6.png");
+  content: "";
   position: absolute;
   top: 50%;
   left: 50%;
@@ -862,6 +868,7 @@ li:last-child {
   width: 1229px;
   height: 621px;
   border-radius: 50%;
+  background: linear-gradient(0deg, rgba(85, 202, 232, 0.07) 0%, rgba(196, 196, 196, 0) 40.2%);
 }
 .form .btn-big {
   margin: 10px 149px 0px 0px;
