--- a/css/style.scss
+++ b/css/style.scss
@@ -25,8 +25,6 @@ h1,h2,h3,p,ul,ol{margin: 0; padding: 0;}
 
 .header {
 	padding: 40px 0px;
-	// font-family: 'Oswald', sans-serif;
-	// position: absolute;
 	width: 100%;
 	z-index: 100;
 }
@@ -35,16 +33,6 @@ h1,h2,h3,p,ul,ol{margin: 0; padding: 0;}
 }
 .row__logo {
 	padding: 0;
-	// &:after{
-	// 		content: '';
-	// 		display: block;
-	// 		position: absolute;
-	// 		width: 4px;
-	// 		height: 4px;
-	// 		top: 0.5px;
-	// 		left: 0.5px;
-	// 		background: #55CAE8;
-	// 	}
 }
 
 .header__menu {
@@ -57,7 +45,6 @@ h1,h2,h3,p,ul,ol{margin: 0; padding: 0;}
 			position: fixed;
 			top: 6%;
 			right: 5%;
-			// right: 10px;
 			width: 30px;
 			height: 18px;
 			cursor: pointer;
@@ -80,7 +67,6 @@ h1,h2,h3,p,ul,ol{margin: 0; padding: 0;}
 			}
 			&.active {
 					span {
-						// background-color: #fff;
 						transform: scale(0);
 						&:first-child {
 							transform: rotate(-45deg);
@@ -98,6 +84,9 @@ h1,h2,h3,p,ul,ol{margin: 0; padding: 0;}
 		@media (max-width: 992px) {
 			overflow: auto;
 			position: fixed;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 			z-index: 200;
 			width: 100%;
 			height: 100%;
@@ -115,8 +104,6 @@ h1,h2,h3,p,ul,ol{margin: 0; padding: 0;}
 	font-family: Poppins, sans-serif;
  	@media (max-width: 992px) {
  		flex-direction: column;
- 		padding: 50% 0;
- 		// transform: translate(0, -50%);
  	}
 }
 .menu__link {
@@ -340,9 +327,12 @@ li {
 	}
 }
 .card__item {
-	border: 3px solid;
-	border-color: rgba(85, 202, 232, 0.5);
-	// border-color: linear-gradient(180deg, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
+	border: 3px solid transparent;
+   // -moz-border-image: -moz-linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
+   // -webkit-border-image: -webkit-linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
+   // border-image: linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
+   border-image-slice: 1;
+	border-image-source: linear-gradient(180deg, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
 	margin: 0px 10px 14px 0px;
 	padding: 24px 15px 19px 15px;
 	width: 211px;
@@ -439,19 +429,6 @@ li {
 		color: #2E2B32;
 		margin: 0;
 		position: relative;
-		// &:after {
-		// 	content: '';
-		// 	position: absolute;
-		// 	width: 315px;
-		// 	height: 315px;
-		// 	top: -65%;
-		// 	left: -68%;
-		// 	// background-color: gray;			
-		// 	background: linear-gradient(270deg, rgba(85, 202, 232, 0.07) 4.6%, rgba(196, 196, 196, 0) 93.97%);
-		// 	// transform: matrix(-1, 0, 0, 1, 0, 0);
-		// 	border-radius: 50%;
-
-		// }
 		&:only-child {
  			 &:after{
 				transform: translate(100%, 0);
@@ -511,22 +488,22 @@ li {
 		position: relative;
 		// margin: 0px 0px 56px 0px;
 		&:after {
+			z-index: -1;
 			content: '';
 			position: absolute;
 			width: 315px;
 			height: 315px;
 			right: -25px;
 			top: 50%;
-			transform: translate(0, -50%);		
+			transform: translate(0, -50%);	
 			background: linear-gradient(270deg, rgba(85, 202, 232, 0.07) 4.6%, rgba(196, 196, 196, 0) 93.97%);
-			// transform: matrix(-1, 0, 0, 1, 0, 0);
 			border-radius: 50%;
 		}
 	}
 	.second {
 		position: relative;
-		// margin: 0px 0px 56px 0px;
 		&:after {
+			z-index: -1;
 			content: '';
 			position: absolute;
 			width: 315px;
@@ -542,6 +519,7 @@ li {
 	.third {
 		position: relative;
 		&:after {
+			z-index: -1;
 			content: '';
 			position: absolute;
 			width: 315px;
@@ -550,25 +528,9 @@ li {
 			top: 55%;
 			transform: translate(0, -50%);		
 			background: linear-gradient(270deg, rgba(85, 202, 232, 0.07) 4.6%, rgba(196, 196, 196, 0) 93.97%);
-			// transform: matrix(-1, 0, 0, 1, 0, 0);
 			border-radius: 50%;
 		}
 	}
-	// .image {
-	// 	position: relative;
-	// 	&:after {
-	// 		content: '';
-	// 		position: absolute;
-	// 		width: 315px;
-	// 		height: 315px;
-	// 		right: -25px;
-	// 		top: 50%;
-	// 		transform: translate(0, -50%);		
-	// 		background: linear-gradient(270deg, rgba(85, 202, 232, 0.07) 4.6%, rgba(196, 196, 196, 0) 93.97%);
-	// 		// transform: matrix(-1, 0, 0, 1, 0, 0);
-	// 		border-radius: 50%;
-	// 	}
-	// }
 	&:nth-child(2) {
 		.relables__text {
 			@media (max-width: 992px){
@@ -742,7 +704,6 @@ li {
 }
 // ====================================
 .form {
-	// width: 100%;
 	padding: 110px 0px 122px 0px;
 	@media (max-width: 992px) {
 		padding: 55px 0px 61px 0px;
@@ -751,14 +712,10 @@ li {
 		position: relative;
 		@media (max-width: 767px) {
 			width: 100%;
-			// display: flex;
-			// flex-direction: column;
-			// // justify-content: center;
-			// // align-items: center;
 		}
 		&:after {
 			z-index: -1;
-			content: url('../img/Ellipse 6.png');
+			content: '';
 			position: absolute;
 			top: 50%;
 			left: 50%;
@@ -766,6 +723,7 @@ li {
 			width: 1229px;
 			height: 621px;               
 			border-radius: 50%;
+			background: linear-gradient(0deg, rgba(85, 202, 232, 0.07) 0%, rgba(196, 196, 196, 0) 40.2%);
 		}
 	}
 	.btn-big {
