--- a/css/style.css
+++ b/css/style.css
@@ -438,8 +438,8 @@ li:last-child {
 
 .card__item {
   border: 3px solid transparent;
+  border-image: linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
   border-image-slice: 1;
-  border-image-source: linear-gradient(180deg, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
   margin: 0px 10px 14px 0px;
   padding: 24px 15px 19px 15px;
   width: 211px;
