--- a/css/style.scss
+++ b/css/style.scss
@@ -328,11 +328,11 @@ li {
 }
 .card__item {
 	border: 3px solid transparent;
-   // -moz-border-image: -moz-linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
-   // -webkit-border-image: -webkit-linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
-   // border-image: linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
+   -moz-border-image: -moz-linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
+   -webkit-border-image: -webkit-linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
+   border-image: linear-gradient(to bottom, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
    border-image-slice: 1;
-	border-image-source: linear-gradient(180deg, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
+	// border-image-source: linear-gradient(180deg, rgba(85, 202, 232, 0.5) 0%, rgba(201, 232, 240, 0.08) 41.4%, rgba(85, 202, 232, 0) 100%);
 	margin: 0px 10px 14px 0px;
 	padding: 24px 15px 19px 15px;
 	width: 211px;
