--- a/css/style.css
+++ b/css/style.css
@@ -543,16 +543,6 @@ li:last-child {
   transform: translate(100%, 0);
 }
 
-.relables__items img {
-  margin: 0px 44px 0px 0px;
-}
-.relables__items img:last-of-type {
-  margin: 0px 23px 0px 0px;
-}
-.relables__items img:nth-child(2) {
-  margin: 0px 0px 0px 39px;
-}
-
 .relables__p {
   margin: 0px 0px 0px 0px;
   font-family: Oswald;
@@ -596,6 +586,12 @@ li:last-child {
 
 .relables__items .first {
   position: relative;
+  margin: 0px 44px 0px 0px;
+}
+@media (max-width: 992px) {
+  .relables__items .first {
+    margin: 0px 0px 0px 0px;
+  }
 }
 .relables__items .first:after {
   z-index: -1;
@@ -603,7 +599,7 @@ li:last-child {
   position: absolute;
   width: 315px;
   height: 315px;
-  right: -25px;
+  right: -70px;
   top: 50%;
   transform: translate(0, -50%);
   background: linear-gradient(270deg, rgba(85, 202, 232, 0.07) 4.6%, rgba(196, 196, 196, 0) 93.97%);
@@ -611,6 +607,12 @@ li:last-child {
 }
 .relables__items .second {
   position: relative;
+  margin: 0px 0px 46px 39px;
+}
+@media (max-width: 992px) {
+  .relables__items .second {
+    margin: 0px 0px 0px 0px;
+  }
 }
 .relables__items .second:after {
   z-index: -1;
@@ -618,8 +620,8 @@ li:last-child {
   position: absolute;
   width: 315px;
   height: 315px;
-  left: -25px;
-  top: 0;
+  left: -60px;
+  top: 50px;
   transform: translate(0, -50%);
   background: linear-gradient(270deg, rgba(85, 202, 232, 0.07) 4.6%, rgba(196, 196, 196, 0) 93.97%);
   transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -627,6 +629,12 @@ li:last-child {
 }
 .relables__items .third {
   position: relative;
+  margin: 0px 23px 0px 0px;
+}
+@media (max-width: 992px) {
+  .relables__items .third {
+    margin: 0px 0px 0px 0px;
+  }
 }
 .relables__items .third:after {
   z-index: -1;
@@ -634,7 +642,7 @@ li:last-child {
   position: absolute;
   width: 315px;
   height: 315px;
-  right: -25px;
+  right: -43px;
   top: 55%;
   transform: translate(0, -50%);
   background: linear-gradient(270deg, rgba(85, 202, 232, 0.07) 4.6%, rgba(196, 196, 196, 0) 93.97%);
